# AirClip

./: .gitignore  AirClip.sqlite  Doxyfile  README.MD  README.md  TODO.md
AirClip/: AirClipServer.cpp  AirClipServer.h  CMakeLists.txt  ClipboardEntry.cpp  ClipboardEntry.h  ClipboardHelper.cpp  ClipboardHelper.h  DatabaseController.cpp  DatabaseController.h  DatabaseTest.cpp  Device.cpp  Device.h  DeviceInfo.cpp  DeviceInfo.h  NetworkConnection.cpp  NetworkConnection.h  NetworkTest.cpp  UI.cpp  UI.h  User.cpp  User.h  UserManager.cpp  UserManager.h  airclip.sql  main.cpp  styles.css
Class Test Examples/: DatabaseTest.cpp
html/: _air_clip_server_8h_source.html  _clipboard_entry_8h_source.html  _clipboard_helper_8h_source.html  _database_controller_8h_source.html  _device_8h_source.html  _device_info_8h_source.html  _network_connection_8h_source.html  _u_i_8h_source.html  _user_8h_source.html  _user_manager_8h_source.html  annotated.html  class_air_clip_server-members.html  class_air_clip_server.html  class_clipboard_entry-members.html  class_clipboard_entry.html  class_clipboard_helper-members.html  class_clipboard_helper.html  class_database_controller-members.html  class_database_controller.html  class_device-members.html  class_device.html  class_device_info-members.html  class_device_info.html  class_network_connection-members.html  class_network_connection.html  class_u_i-members.html  class_u_i.html  class_user-members.html  class_user.html  class_user_manager-members.html  class_user_manager.html  classes.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  hierarchy.html  main_8cpp.html  menudata.js  (+2 more)
html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_8.js  all_a.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  searchdata.js
latex/: _air_clip_server_8h_source.tex  _clipboard_entry_8h_source.tex  _clipboard_helper_8h_source.tex  _database_controller_8h_source.tex  _device_8h_source.tex  _device_info_8h_source.tex  _network_connection_8h_source.tex  _u_i_8h_source.tex  _user_8h_source.tex  _user_manager_8h_source.tex  annotated.tex  class_air_clip_server.tex  class_clipboard_entry.tex  class_clipboard_helper.tex  class_database_controller.tex  class_device.tex  class_device_info.tex  class_network_connection.tex  class_u_i.eps  class_u_i.tex  class_user.tex  class_user_manager.tex  files.tex  hierarchy.tex  main_8cpp.tex  refman.tex  struct_entry.tex
